--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # User-specific files
+VuCongHan_TTS_CTIN/
 *.rsuser
 *.suo
 *.user
