Update promt OpenAI and đường dẫn của OCR với 2 tài liệu Tessdata và VIet74K

--- a/EPIC01/EPIC01/appsettings.json
+++ b/EPIC01/EPIC01/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "OpenAI": {
-    "ApiKey": "luumytran + Vũ Công Hân"
+    "ApiKey": ""
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
